# riding_agent

./: .env.example  .gitignore  README.md  checkpoints.db-shm  checkpoints.db-wal  docker-compose.yml  langgraph.json  main.py  pyproject.toml
app/: db.py  db_mysql.py  models.py  redis_client.py
app/agents/: __init__.py  agent.py
app/api/v1/: activity_routes.py  fitness_routes.py  route_routes.py  routes.py  schemas.py  user_routes.py
app/auth/: dependencies.py  routes.py  schemas.py  utils.py
app/services/: dem_service.py  elevation_service.py  fit_service.py  fitness_service.py  oss_service.py  route_service.py
data/srtm/: .gitkeep
docs/superpowers/specs/: 2026-06-11-fit-upload-fitness-analysis-design.md
openspec/changes/add-distance-markers/: design.md  proposal.md  tasks.md
openspec/changes/add-elevation-panel-garmin-style/: design.md  proposal.md  tasks.md
openspec/changes/add-elevation-profile-panel/: design.md  proposal.md  tasks.md
openspec/changes/add-fitness-time-series-charts/: design.md  proposal.md  tasks.md
openspec/changes/add-garmin-elevation-panel/: design.md  proposal.md  tasks.md
openspec/changes/add-route-import-export/: design.md  proposal.md
openspec/changes/add-user-auth-module/: design.md  proposal.md  tasks.md
openspec/changes/enlarge-distance-markers/: design.md  proposal.md  tasks.md
refer/: uci爬坡段分级规则.md  爬坡段面板样式参考.md
static/: index.html
static/css/: style.css
tests/: test_agent.py  test_elevation_service.py  test_route_model.py  test_route_routes.py  test_route_schemas.py  test_route_service.py
(+220 files in other folders)
